# trueemotion-pro

./: .gitignore  EVALUATION_REPORT.md  LICENSE  README.md  SKILL.md  START.bat  pyproject.toml  test_api.py
.claude/: settings.json  settings.local.json
docs/: COMPANION_DESIGN.md
memory/: evolution_history.json
src/: temp_sina.txt  training_log.txt
src/models/: best_model.pt  checkpoint_epoch_10.pt  hq_model.pt  optimized_model.pt  v3_model.pt
src/trueemotion/: __init__.py  __main__.py  api.py  trueemotion_pro.py  trueemotion_system.py
src/trueemotion/api/: __init__.py  facade.py  routes.py  schemas.py  server.py
src/trueemotion/api/templates/: demo.html
src/trueemotion/core/: __init__.py
src/trueemotion/core/analysis/: analyzer.py  context.py  output.py  pipeline.py  response_builder.py
src/trueemotion/core/emotions/: __init__.py  detector.py  i18n.py  irony.py  personality.py  plutchik24.py
src/trueemotion/core/llm/: __init__.py  base.py  emotion_detector.py  fallback.py  openai_client.py  prompts.py  response_generator.py
src/trueemotion/core/response/: __init__.py  engine.py  proactive.py  templates.py
src/trueemotion/data/: __init__.py  data_generator.py  hq_data_generator.py  literary_data_generator.py  murakami_generator.py  real_emotion_generator.py  real_labeled_data.csv  scenario_generator.py
src/trueemotion/emotion/: __init__.py  emotion_output.py  plutchik24.py
src/trueemotion/evolution/: __init__.py  emotion_evolution.py
src/trueemotion/expression/: empathy_engine.py  nl_generator.py  personality.py
src/trueemotion/learning/: __init__.py  evolution.py
src/trueemotion/memory/: repository.py
src/trueemotion/models/: __init__.py  bert_emotion.py  char_emotion_model.py  context_encoder.py  emotion_model.py  emotion_v4.py  hybrid_emotion.py  irony_detector.py  multi_label_emotion.py  neural_model.py  optimized_model.py  train_model.py
src/trueemotion/training/: __init__.py  trainer.py
tests/: conftest.py  test_analyzer.py  test_context.py  test_core.py  test_emotion_detector.py  test_empathy.py  test_evolution.py  test_integration.py  test_irony.py  test_repository.py  test_server.py
